# tool-tool

./: .tool-tool.v2.kdl  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.run/: All Tests (UPDATE_EXPECT).run.xml
.tool-tool/: .gitignore  tool-tool.v2.kdl  tool-tool.v2.toml
.tool-tool/v2/: checksums.kdl
.tool-tool/v2/tools/tmp/: download-lsd-0.17.0
base/: Cargo.toml
base/src/: lib.rs  logging.rs  result.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
logic/: Cargo.toml
logic/src/: adapter.rs  checksums.rs  configuration.rs  download_task.rs  execute_tool.rs  file_type.rs  hash.rs  help.rs  lib.rs  lock_guard.rs  mock_adapter.rs  run_command.rs  runner.rs  runner_initial.rs  store.rs  template_expander.rs  template_string.rs  test_util.rs  types.rs  version.rs  workspace.rs
logic/src/configuration/: expand_config.rs  parse_config.rs  platform.rs
logic/src/test_util/: archive_builder.rs  targz_builder.rs  zip_builder.rs
real_adapter/: Cargo.toml
real_adapter/src/: download.rs  lib.rs  real_adapter.rs
scripts/: build_release.sh  commit.sh  create_release.sh  revision.sh
scripts/git-hooks/: commit-msg  install-hooks.sh  pre-commit
