[workspace]
resolver = "3"
members = ["base", "logic", "real_adapter", "cli"]

[workspace.dependencies]
miette = { version = "7.6.0", features = ["fancy"] }


[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 0
lto = false
#debug = false


[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1