[workspace]
resolver = "3"
members = ["base", "logic", "real_adapter", "cli"]

[workspace.dependencies]
anyhow = "1.0.99"
miette = { version = "7.6.0", features = ["fancy"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
relative-path = "2.0.1"
assertables = "9.8.2"
toml-span = "0.5.2"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 0
lto = false
#debug = false


[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1