[package]
name = "tool-tool"
version = "0.3.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
tool-tool-base = {path = "../base", version = "0.3.0" }
tool-tool-logic = {path = "../logic", version = "0.3.0" }
tool-tool-real_adapter = {path = "../real_adapter", version = "0.3.0" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
enable-ansi-support = "0.3.1"
