[package]
name = "tool-tool-logic"
version = "0.2.0"
edition = "2024"

[dependencies]
tool-tool-base = {path = "../base"}

tracing = { workspace = true }
relative-path = "2.0.1"
kdl = "6.3.4"
miette = { version = "7.6.0", features = ["fancy"] }
sha2 = "0.10.9"

[dev-dependencies]
expect-test = "1.5.1"
indent = "0.1.1"