[package]
name = "tool-tool-real_adapter"
version = "0.2.2"
edition = "2024"

[dependencies]
tool-tool-base = {path = "../base", version = "0.2.2" }
tool-tool-logic = {path = "../logic", version = "0.2.2" }

ureq = { version = "3.0.12", features = ["platform-verifier"] }
rand = "0.9.2"

[dev-dependencies]
httpmock = "0.7.0"
test-temp-dir = "0.3.5"
assertables =  {workspace = true}
